--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Surpised!</h1>
 		</header>
 			<section id="content">
 				<canvas id="SampleAssignment" data-processing-sources="SampleAssignment.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Click to change colors
 	    </footer>
 	</body>
 </html>
